# ChangeLog for kde-misc/kshutdown
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/kde-misc/kshutdown/ChangeLog,v 1.13 2008/02/18 23:13:29 ingmar Exp $

  18 Feb 2008; Ingmar Vanhassel <ingmar@gentoo.org> kshutdown-1.0.ebuild:
  Update kde-base/* dependencies so that KDE 4 doesn't satisfy it. bug 206528.

*kshutdown-1.0 (23 May 2007)

  23 May 2007; Stefan Schweizer <genstef@gentoo.org>
  -files/kshutdown-0.6.0-makefile-fix.patch, -kshutdown-0.6.0.ebuild,
  -kshutdown-0.8.ebuild, +kshutdown-1.0.ebuild:
  version bump

  22 Feb 2007; Piotr Jaroszyński <peper@gentoo.org> ChangeLog:
  Transition to Manifest2.

  24 Oct 2006; Simon Stelling <blubb@gentoo.org> kshutdown-0.8.2.ebuild:
  stable on amd64

  07 Jun 2006; Joshua Jackson <tsunam@gentoo.org> kshutdown-0.8.2.ebuild:
  Stable on x86; bug #135673

*kshutdown-0.8.2 (10 Apr 2006)

  10 Apr 2006; Marcus D. Hanwell <cryos@gentoo.org> +kshutdown-0.8.2.ebuild:
  Version bump.

  08 Dec 2005; Marcus D. Hanwell <cryos@gentoo.org> kshutdown-0.8.ebuild:
  Marked ~amd64.

*kshutdown-0.8 (29 Nov 2005)

  29 Nov 2005; Gregorio Guidi <greg_g@gentoo.org> +kshutdown-0.8.ebuild:
  New version (#113831).

  09 Jul 2005; Gregorio Guidi <greg_g@gentoo.org> kshutdown-0.6.0.ebuild:
  Stable on x86.

*kshutdown-0.6.0 (10 Mar 2005)

  10 Mar 2005; Gregorio Guidi <greg_g@gentoo.org>
  +files/kshutdown-0.6.0-makefile-fix.patch, +kshutdown-0.6.0.ebuild:
  New version.

*kshutdown-0.2.1 (30 Oct 2004)

  30 Oct 2004; Carsten Lohrke <carlo@gentoo.org> +metadata.xml,
  +kshutdown-0.2.1.ebuild:
  Moved from app-misc/kshutdown to kde-misc/kshutdown.

  03 Sep 2004; David Holm <dholm@gentoo.org> kshutdown-0.2.1.ebuild:
  Added to ~ppc.

*kshutdown-0.2.0 (19 Aug 2004)

  19 Aug 2004; Konstantin Arkhipov <voxus@gentoo.org>
  +kshutdown-0.2.1.ebuild:
  Initial revision, closing bug #36487.
  Thanks to Elias Probst <elias.probst@gmx.de>.