@@ -1,6 +1,12 @@
 # ChangeLog for kde-misc/kshutdown
-# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-misc/kshutdown/ChangeLog,v 1.13 2008/02/18 23:13:29 ingmar Exp $
+# Copyright 2002-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/kde-misc/kshutdown/ChangeLog,v 1.14 2009/02/05 19:16:57 scarabeus Exp $
+
+*kshutdown-2.0_beta4 (05 Feb 2009)
+
+  05 Feb 2009; Tomas Chvatal <scarabeus@gentoo.org>
+  +kshutdown-2.0_beta4.ebuild:
+  Version bump. Per bug #257189.
 
   18 Feb 2008; Ingmar Vanhassel <ingmar@gentoo.org> kshutdown-1.0.ebuild:
   Update kde-base/* dependencies so that KDE 4 doesn't satisfy it. bug 206528.
